--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "leaflet": "^1.6.0",
+    "leaflet-routing-machine": "^3.2.12",
+    "lrm-google": "^1.0.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-geolocated": "^3.0.1",
     "react-icons": "^3.9.0",
+    "react-leaflet": "^2.6.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-toastify": "^5.5.0",
